--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 
 		<dependency>
 			<groupId>org.webjars</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>6.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
 			<artifactId>toastr</artifactId>
 			<version>2.1.2</version>
 		</dependency>
@@ -97,6 +103,23 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.0.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
