--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-server.port=8081
-spring.jpa.hibernate.ddl-auto=none
+server.port=8082
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/register-party?useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=${jdbc.username:root}
 spring.datasource.password=${jdbc.password:}
