--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.mvc.view.suffix=.jsp
 
 server.port=8082
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/register-party?useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=${jdbc.username:root}
-spring.datasource.password=${jdbc.password:}
+spring.datasource.url=jdbc:mysql://pfw0ltdr46khxib3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ftodcgxb1zko8sc7?useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=${jdbc.username:lscrwwv60t2f3ibk}
+spring.datasource.password=${jdbc.password:rjqxlhni5uyaqbhl}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.testOnBorrow=true
