--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 server.port=8082
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://pfw0ltdr46khxib3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ftodcgxb1zko8sc7?useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=${jdbc.username:lscrwwv60t2f3ibk}
 spring.datasource.password=${jdbc.password:rjqxlhni5uyaqbhl}
